--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^5.0.16",
     "mongoose-unique-validator": "^2.0.0",
     "morgan": "^1.9.0",
-    "socket.io": "^2.1.0"
+    "socket.io": "^2.1.0",
+    "cors": "*"
   }
 }
